--- a/style.css
+++ b/style.css
@@ -1,11 +1,6 @@
-body {
-    background-color: orange;
-    font-family: sans-serif;
-  }
-
 * { box-sizing: border-box;}
 
-$primaryColor: yellow;
+$primaryColor: orange;
 $dkBg: #303947;
 $itemBg: #6788a7;
 $itemBgOdd: darken(#6788a7,15%);
