--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ $dkBg: #303947;
 $itemBg: #6788a7;
 $itemBgOdd: darken(#6788a7,15%);
 
+.side-scroll-item + .side-scroll-item {
+  margin-left: 60px;
+}
+
 html, body {
   font-family: "Arial", sans-serif;
   background: #fff;
