--- a/style.css
+++ b/style.css
@@ -1,87 +1,90 @@
-* { box-sizing: border-box;}
+body {
+  background-color: orange;
+  font-family: sans-serif;
+  * { box-sizing: border-box;}
 
-$primaryColor: orange;
-$dkBg: #303947;
-$itemBg: #6788a7;
-$itemBgOdd: darken(#6788a7,15%);
+  $primaryColor: orange;
+  $dkBg: #303947;
+  $itemBg: #6788a7;
+  $itemBgOdd: darken(#6788a7,15%);
 
-.side-scroll-item + .side-scroll-item {
-  margin-left: 60px;
-}
-
-html, body {
-  font-family: "Arial", sans-serif;
-  background: #fff;
-  padding: 80px 30px 30px;
-  color: #444;
-  height: 100%;
-}
-
-ol, ul {
-  margin: 0 0 50px 0;
-}
-
-h1 {
-  font-weight: bold;
-  color: black;
-}
-
-p {
-  line-height: 1.6em;
-  margin-bottom: 10px;
-  font-size: 18px;
-  padding: 0;
-  &:last-child {
-    margin-bottom: 40px;
+  .side-scroll-item + .side-scroll-item {
+    margin-left: 60px;
   }
-}
 
-code {
-  background: #d4ca3d;
-  color: #d64f9b;
-  border: 1px solid #eee;
-  padding: 2px;
-  border-radius: 3px;
-}
+  html, body {
+    font-family: "Arial", sans-serif;
+    background: #fff;
+    padding: 80px 30px 30px;
+    color: #444;
+    height: 100%;
+  }
 
-a {
-  font-weight: bold;
-  color: $primaryColor; 
-  text-decoration: none;
-  transition: all 200ms;
-  &:hover,
-  &:focus{
+  ol, ul {
+    margin: 0 0 50px 0;
+  }
+
+  h1 {
+    font-weight: bold;
     color: black;
   }
-}
 
-article {
-  min-height: 50vh;
-  margin-bottom: 50px;
-  .margin {
-    margin-bottom: 100vh;
+  p {
+    line-height: 1.6em;
+    margin-bottom: 10px;
+    font-size: 18px;
+    padding: 0;
+    &:last-child {
+      margin-bottom: 40px;
+    }
   }
-}
 
-nav {
-  display: flex;
-  width: 100%;
-  top: 0;
-  left: 0;
-  background: $dkBg;
-  position: fixed;
-  padding: 30px;
+  code {
+    background: #d4ca3d;
+    color: #d64f9b;
+    border: 1px solid #eee;
+    padding: 2px;
+    border-radius: 3px;
+  }
+
   a {
-    display: inline-flex;
-    padding: 20px 30px;
-    color: #fff;
+    font-weight: bold;
+    color: $primaryColor; 
     text-decoration: none;
+    transition: all 200ms;
     &:hover,
-    &:focus {
+    &:focus{
       color: black;
     }
-    &.active {
-      color: $primaryColor;
+  }
+
+  article {
+    min-height: 50vh;
+    margin-bottom: 50px;
+    .margin {
+      margin-bottom: 100vh;
     }
   }
-}
+
+  nav {
+    display: flex;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background: orange;
+    position: fixed;
+    padding: 0px;
+    a {
+      display: inline-flex;
+      padding: 20px 30px;
+      color: #fff;
+      text-decoration: none;
+      &:hover,
+      &:focus {
+        color: black;
+      }
+      &.active {
+        color: $primaryColor;
+      }
+    }
+  }
