--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ a.double {border-style: double;}
     .margin {
       margin-bottom: 100vh;
     }
+    
   }
 article.double {border-style: double;}
   nav {
@@ -100,4 +101,23 @@ article.double {border-style: double;}
     }
     nav.double {border-style: double;}
     a.double {border-style: double;}
+        /* width */
+    ::-webkit-scrollbar {
+      width: 10px;
+    }
+    
+    /* Track */
+    ::-webkit-scrollbar-track {
+      background: #f1f1f1;
+    }
+    
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+      background: #888;
+    }
+    
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+      background: #555;
+    }
   }
