--- a/style.css
+++ b/style.css
@@ -3,29 +3,32 @@ body {
   font-family: sans-serif;
   * { box-sizing: border-box;}
 
-  $primaryColor: orange;
+  $primaryColor: black;
   $dkBg: #303947;
   $itemBg: #6788a7;
   $itemBgOdd: darken(#6788a7,15%);
-}
+
   .side-scroll-item + .side-scroll-item {
     margin-left: 60px;
   }
 
-  html, body {  
+  html, body {
     font-family: "Arial", sans-serif;
     background: #fff;
     padding: 80px 30px 30px;
     color: #444;
     height: 100%;
   }
+
   ol, ul {
     margin: 0 0 50px 0;
   }
+
   h1 {
     font-weight: bold;
     color: black;
   }
+
   p {
     line-height: 1.6em;
     margin-bottom: 10px;
@@ -35,6 +38,7 @@ body {
       margin-bottom: 40px;
     }
   }
+
   code {
     background: #d4ca3d;
     color: #d64f9b;
@@ -42,6 +46,7 @@ body {
     padding: 2px;
     border-radius: 3px;
   }
+
   a {
     font-weight: bold;
     color: $primaryColor; 
@@ -52,13 +57,15 @@ body {
       color: black;
     }
   }
+
   article {
     min-height: 50vh;
     margin-bottom: 50px;
+    .margin {
       margin-bottom: 100vh;
     }
-    
   }
+
   nav {
     display: flex;
     width: 100%;
