--- a/style.css
+++ b/style.css
@@ -2,33 +2,28 @@ body {
   background-color: orange;
   font-family: sans-serif;
   * { box-sizing: border-box;}
-
-  $primaryColor: black;
+  $primaryColor: orange;
   $dkBg: #303947;
   $itemBg: #6788a7;
   $itemBgOdd: darken(#6788a7,15%);
-
+}
   .side-scroll-item + .side-scroll-item {
     margin-left: 60px;
   }
-
-  html, body {
+  html, body {  
     font-family: "Arial", sans-serif;
     background: #fff;
     padding: 80px 30px 30px;
     color: #444;
     height: 100%;
   }
-
   ol, ul {
     margin: 0 0 50px 0;
   }
-
   h1 {
     font-weight: bold;
     color: black;
   }
-
   p {
     line-height: 1.6em;
     margin-bottom: 10px;
@@ -38,7 +33,6 @@ body {
       margin-bottom: 40px;
     }
   }
-
   code {
     background: #d4ca3d;
     color: #d64f9b;
@@ -46,7 +40,6 @@ body {
     padding: 2px;
     border-radius: 3px;
   }
-
   a {
     font-weight: bold;
     color: $primaryColor; 
@@ -57,15 +50,14 @@ body {
       color: black;
     }
   }
-
   article {
     min-height: 50vh;
     margin-bottom: 50px;
     .margin {
       margin-bottom: 100vh;
     }
-  }
 
+  }
   nav {
     display: flex;
     width: 100%;
