--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   $dkBg: #303947;
   $itemBg: #6788a7;
   $itemBgOdd: darken(#6788a7,15%);
-
+}
   .side-scroll-item + .side-scroll-item {
     margin-left: 60px;
   }
