--- a/style.css
+++ b/style.css
@@ -2,13 +2,14 @@ body {
   background-color: orange;
   font-family: sans-serif;
   * { box-sizing: border-box;}
-
   $primaryColor: black;
   $dkBg: #303947;
   $itemBg: #6788a7;
   $itemBgOdd: darken(#6788a7,15%);
 }
-
+  .side-scroll-item + .side-scroll-item {
+    margin-left: 60px;
+  }
   html, body {
     font-family: "Arial", sans-serif;
     background: #fff;
@@ -16,17 +17,14 @@ body {
     color: #444;
     height: 100%;
   }
-
   ol, ul {
     margin: 0 0 50px 0;
   }
-
   h1 {
     font-weight: bold;
     color: black;
     background-image: url('honeycomb-scaled.png');
   }
-
   p {
     background-image: url('honeycomb-scaled.png');
     line-height: 1.6em;
@@ -37,7 +35,6 @@ body {
       margin-bottom: 40px;
     }
   }
-
   code {
     background: #d4ca3d;
     color: #d64f9b;
@@ -56,7 +53,6 @@ body {
       color: black;
     }
   }
-
   article {
     background-image: url('honeycomb-scaled.png');
     min-height: 50vh;
@@ -65,7 +61,6 @@ body {
       margin-bottom: 100vh;
     }
   }
-
   nav {
     display: flex;
     width: 100%;
